[package]
name = "arbiter-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Servant's entry point — silent tray lifecycle and engine host."

[[bin]]
name = "arbiter"
path = "src/main.rs"

[features]
default = ["presence"]
presence = ["arbiter-core/presence"]

[dependencies]
arbiter-core   = { path = "../arbiter-core", features = ["vigil-fs", "vigil-keys", "vigil-sys", "signet", "vigil-deep"] }
arbiter-bridge = { path = "../arbiter-bridge" }
tao           = { workspace = true }
tray-icon     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs          = { workspace = true }
image         = { workspace = true }
windows       = { workspace = true }
tokio-util    = { workspace = true }
bytes         = { workspace = true }
rmp-serde     = { workspace = true }
futures       = { workspace = true }
serde_json    = { workspace = true }
chrono        = { workspace = true }
kamadak-exif = "0.6.1"

[build-dependencies]
winres = { workspace = true }
