[package]
name = "arbiter-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Hand, Inscribe, and Shell — the mechanical execution bridge."

[dependencies]
arbiter-core = { path = "../arbiter-core", features= ["signet", "vigil-fs", "vigil-keys"]}
enigo       = { workspace = true }
walkdir     = { workspace = true }
regex       = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
lazy_static = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
globset     = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# Windows-only: idle detection via GetLastInputInfo / GetTickCount
[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
