[package]
name = "arbiter-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Atlas, Vigil, Presence, and Signet — the deterministic engine core."

[features]
default = ["vigil-sys", "vigil-fs", "vigil-keys", "vigil-clipboard", "signet"]
vigil-fs   = ["dep:notify"]
vigil-keys = ["dep:global-hotkey"]
vigil-sys  = ["dep:sysinfo"]
vigil-clipboard = []
presence   = ["dep:rdev"]
signet     = ["dep:aes-gcm", "dep:base64", "dep:hostname", "dep:typenum"]
# Layer 2 (Analytical) content extraction: SHA-256 hashing and MIME detection.
vigil-deep = ["dep:sha2", "dep:md-5", "dep:infer", "dep:exif"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
regex      = { workspace = true }
chrono     = { workspace = true }
lazy_static= { workspace = true }
dirs       = { workspace = true }
rmp-serde  = { workspace = true }
thiserror  = { workspace = true }
windows    = { workspace = true, features = ["Win32_System_Registry", "Win32_Foundation", "Win32_Security", "Win32_Security_Cryptography", "Win32_Security_Authorization", "Win32_System_Memory", "Win32_System_DataExchange", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }


# Feature: vigil-fs
notify      = { workspace = true, optional = true }

# Feature: vigil-keys
global-hotkey = { workspace = true, optional = true }

# Feature: vigil-sys
sysinfo     = { workspace = true, optional = true }

# Feature: presence
rdev        = { workspace = true, optional = true }

# Feature: signet
aes-gcm     = { workspace = true, optional = true }
base64      = { workspace = true, optional = true }
hostname    = { workspace = true, optional = true }
typenum     = { workspace = true, optional = true }

# Feature: vigil-deep
sha2        = { workspace = true, optional = true }
"md-5"      = { workspace = true, optional = true }
infer       = { workspace = true, optional = true }
exif = { package = "kamadak-exif", version = "0.6", optional = true }
globset     = { workspace = true }
