[package]
name = "arbiter-forge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The visual command center for Arbiter."

[dependencies]
arbiter-core = { path = "../arbiter-core", features = ["vigil-fs", "vigil-keys", "signet"] }
arbiter-bridge = { path = "../arbiter-bridge" }

slint           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
tokio           = { workspace = true }
chrono          = { workspace = true }
tokio-util      = { workspace = true }
bytes           = { workspace = true }
rmp-serde       = { workspace = true }
futures         = { workspace = true }
rfd             = "0.17.2"

[build-dependencies]
slint-build     = { workspace = true }
winres          = { workspace = true }
