[package]
name = "arbiter-inquisitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Diagnostic UI for Arbiter."

[dependencies]
arbiter-core =   { path = "../arbiter-core", features = ["vigil-fs", "vigil-keys", "signet"] }
arbiter-bridge = { path = "../arbiter-bridge" }
eframe             = { workspace = true }
egui               = { workspace = true }
egui_extras        = { workspace = true }
globset            = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
futures            = { workspace = true }
chrono             = { workspace = true }
rmp-serde          = { workspace = true }
bytes              = { workspace = true }
